--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,5 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to right, rgb(109, 39, 123), rgb(54, 23, 111));
 }
